syntax = "proto3";

package spine.system.server;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.system.server";
option java_outer_classname = "DiagnosticEventsProto";
option java_multiple_files = true;

import "spine/core/diagnostics.proto";
import "spine/validate/validation_error.proto";

message ConstraintViolated {

    core.EntityQualifier entity = 1 [(required) = false];

    core.MessageQualifier last_message = 2 [(required) = false];

    core.MessageQualifier root_message = 3 [(required) = false];

    repeated validate.ConstraintViolation violation = 4 [(required) = false];
}
